Added json support, basic Module/Unit structure

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Strict"]
 	path = Strict
 	url = https://github.com/KonstantinSeurer/Strict
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json
