cmake: Include the scaler llvm component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(LLVM REQUIRED CONFIG)
 
-llvm_map_components_to_libnames(REQUIRED_LLVM_LIBRARIES core)
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+
+llvm_map_components_to_libnames(REQUIRED_LLVM_LIBRARIES core scalaropts)
 
 file(GLOB_RECURSE STRICTLLVM_SOURCE_FILES source/*.cpp)
 
